--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "build": "webpack --mode development",
+    "start": "webpack --mode development --watch",
+    "test": "jest --coverage"
   },
+
+  "jest": {
+    "testEnvironment": "node"
+  },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
